style: fix 'visibility' property value

--- a/wp-content/themes/viaembedded/style.css
+++ b/wp-content/themes/viaembedded/style.css
@@ -1495,7 +1495,7 @@ a[name] {
     display: block;
     position: relative;
     top: -60px;
-    visibility: none;
+    visibility: hidden;
 }
 
 /*--------------------------------------------------------------
